# cargo-features = ["strip"]

[package]
name = "pixivnp"
version = "0.3.0"
authors = ["THMonster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-channel = "1"
futures = "0.3"
async-recursion = "1"

[profile.release]
panic = 'abort'
opt-level = 3
lto = true
# strip = "symbols"
